# cs2-battle-bot-api-client

./: README.md  pyproject.toml
.github/workflows/: generate_client.yml  publish.yml
cs2_battle_bot_api_client/: __init__.py
cs2_battle_bot_api_client/api/account_connect_link/: account_connect_link_retrieve.py
cs2_battle_bot_api_client/api/discord_users/: discord_users_create.py  discord_users_destroy.py  discord_users_list.py  discord_users_partial_update.py  discord_users_retrieve.py  discord_users_update.py
cs2_battle_bot_api_client/api/guilds/: guilds_add_member_create.py  guilds_create.py  guilds_destroy.py  guilds_list.py  guilds_partial_update.py  guilds_retrieve.py  (+1 more)
cs2_battle_bot_api_client/models/: __init__.py  account_connect_link.py  create_guild.py  create_guild_member.py  create_match.py  create_match_cvars.py  discord_user.py  guild.py  interaction_user.py  map_.py  map_ban.py  map_sides_enum.py  match.py  match_ban_map.py  match_ban_map_result.py  match_config.py  match_config_cvars.py  match_config_team_1.py  match_config_team_2.py  match_map_selected.py  match_pick_map.py  match_pick_map_result.py  match_player_join.py  match_type_enum.py  match_update.py  match_update_cvars.py  matches_create_response_400.py  nested.py  paginated_discord_user_list.py  paginated_guild_list.py  paginated_map_ban_list.py  paginated_map_list.py  paginated_match_list.py  paginated_match_map_selected_list.py  paginated_player_list.py  paginated_server_list.py  paginated_steam_user_list.py  paginated_team_list.py  patched_discord_user.py  patched_guild.py  (+17 more)
(+50 files in other folders)
